[package]
name = "koala"
version = "0.1.4"
authors = ["edicury <edisoncuryn@gmail.com>"]
edition = "2018"
description = "Python's pandas implementation in Rust"
repository = "https://github.com/edicury/koala"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "koala"
path = "src/lib.rs"


[dependencies]
regex = "1"